Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Add upgrade.upgrade_z2_8() to migrate indexes for Zope-2.8.x
Bug fixes:
~~~~~~~~~~
- Removed extremely long line from traceback in New.
- #872: default section/workspaces were created with unicode titles.
- Call translation_service instead of directly Localizer in installer.
CPS internal features:
~~~~~~~~~~~~~~~~~~~~~~
-