@@ -9,6 +9,7 @@ Bug fixes:
 - Removed extremely long line from traceback in New.
 - #872: default section/workspaces were created with unicode titles.
 - Call translation_service instead of directly Localizer in installer.
+- #889: added upgrade function to fix broken flexible fields
 CPS internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
